# EMIT-L2A-RFL

./: DIAGNOSTIC_RESULTS.md  HPC_SETUP.md  INSTALL_HPC.md  PERSISTENT_CORRUPTION_FIX.md  QUICK_FIX.md  README.md  README_DIAGNOSTICS.md  debug_hpc_environment.py  diagnose_netcdf_environment.py  download_to_scratch.py  generate_kings_canyon_timeseries.py  generate_kings_canyon_timeseries_chunked.py  generate_kings_canyon_timeseries_one_month.py  makefile  pyproject.toml  recipe.yaml  test_automatic_hpc_fix.py  test_file_validation.py  test_file_validation_hpc.py  test_hpc_env.sh  test_local_copy.sh  verify_installation.py
EMITL2ARFL/: EMITL2ARFL.py  __init__.py  diagnose_netcdf_issues.py  exceptions.py  file_utils.py  generate_EMIT_L2A_RFL_timeseries.py  retrieve_EMIT_L2A_RFL.py  retrieve_EMIT_L2A_RFL_granule.py  validate_NetCDF_file.py
diagnostics/: Cache Clearing Implementation.md  Changes Summary.md  HPC Fix.md  HPC Production.md  HPC Quickstart.md  HPC Setup.md  HPC Troubleshooting.md  Package Update.md  README.md  check_hdf5_version.py  clean_cache.py  debug_hpc_environment.py  diagnose_netcdf.py  diagnose_single_download.py  run_with_env.sh  test_file_validation_hpc.py  test_hpc.sh  test_single_granule.py  verify_hpc_setup.sh
