[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EMITL2ARFL"
version = "1.0.1"
description = "EMIT L2A Estimated Surface Reflectance and Uncertainty and Masks 60 m Search and Download Utility"
readme = "README.md"
authors = [
    { name = "Gregory H. Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "affine",
    "colored-logging",
    "earthaccess",
    "geopandas",
    "h5py>=3.0",
    "netCDF4>=1.6.0",
    "python-dateutil",
    "rasters>=1.16.1",
    "rioxarray",
    "spectral",
    "xarray",
    "dask"
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "build",
    "pytest>=6.0",
    "pytest-cov",
    "jupyter",
    "pytest",
    "twine"
]

[project.urls]
"Homepage" = "https://github.com/STARS-Data-Fusion/EMITL2ARFL"

[tool.setuptools.packages.find]
include = ["EMITL2ARFL"]
exclude = ["data", "build", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]